# docs/playground/public/mighty-wolf/openapi.yml
@@ -256,12 +256,6 @@ components:
           type: string
         detail:
           type: string
-        layer:
-          type: string
-          enum:
-          - http
-          - contract
-          - domain
         meta:
           type: object
           properties: {}
@@ -274,10 +268,25 @@ components:
       required:
       - code
       - detail
-      - layer
       - meta
       - path
       - pointer
+    errorResponse:
+      type: object
+      properties:
+        errors:
+          type: array
+          items:
+            "$ref": "#/components/schemas/error"
+        layer:
+          type: string
+          enum:
+          - http
+          - contract
+          - domain
+      required:
+      - errors
+      - layer
     integerFilter:
       type: object
       properties:
